--- a/style.css
+++ b/style.css
@@ -1,101 +1,196 @@
-
-
-
-/* -  General Styles -*/
+/* -------  General Styles ------- */
 
 body {
   margin: 0;
   font-family: Helvetica, Arial, sans-serif;
-	background-image:url(images/backgrounds/white-triangle-369b8d2d.jpg);
+  background-image: url(images/backgrounds/subtle_white_mini_waves.jpg);
 }
 
 header {
-	height: 140px;
-	background-color: #ffffff;
-	background-image:url(images/backgrounds/white-triangle-369b8d2d.jpg);
+  background-color: #403933;
+  background-image: url(images/backgrounds/subtle_brown_mini_waves.jpg);
+  margin-bottom: 40px;
 }
 
 .logo {
-  font-family: 'Montserrat Alternates';
+  font-family: 'Nanum Pen Script', cursive;
   font-size: 72px;
-  color: #000000;
+  color: #c5c0b8;
   text-align: center;
   letter-spacing: -3;
   margin: 0;
   padding: 20px 0 0 0;
 }
 
-header h2 {
-	font-family: 'Montserrat', serif;
-	color: #000000;
-	margin: 0px;
-	font-size: 18px;
-	text-align: center;
+
+/* ---  Navigation --- */
+
+header nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-footer {
-	background-color: #000000;
+header nav ul {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 0;
+}
+
+header nav ul li {
+  list-style-type: none;
+}
+
+header nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 20px 0 0;
+  font-family: 'Montserrat Alternates', sans-serif;
+}
+
+header nav ul li a:hover {
+  color: #bdbdbd;
+}
+
+@media all and (min-width: 700px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .logo {
+    margin: 14px 0 14px 20px;
+    padding-top: 0;
+    font-size: 42px;
+  }
+  
+  header nav {
+    margin-top: 14px;
+  }
+}
+
+/* ---  Primary Groups --- */
+
+main {
+  padding: 20px 0;
 }
 
 section {
-	padding: 0 25%;
+  margin-bottom: 100px;
+}
+
+section.dark-background {   
+  background-color: #c5c0b8;
+  padding-top: 80px;
+  padding-bottom: 80px;
   margin: 80px 0;
 }
 
-/* -------  Type ------- */
+footer {
+  background-color: #403933;
+  background-image: url(images/backgrounds/subtle_brown_mini_waves.jpg);
+  margin-top: 40px;
+  margin-bottom: 0;
+}
 
-h1, h2, h3 {
+/* ---  Typography --- */
+
+h1 {
+  font-size: 28px;
   font-family: 'Montserrat Alternates', sans-serif;
-	color: #000000;
-  text-align: center;
+  font-weight: 400;
+  color: #403933;
+}
+
+h2 {
+  font-size: 26px;
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-weight: 400;
+  margin: 0 10px;
+}
+
+h3 {
+  font-size: 18px;
+  font-family: 'Montserrat Alternates', sans-serif;
   font-weight: 500;
 }
 
-h1 { font-size: 28px; }
-h2 { font-size: 26px; }
-h3 { font-size: 18px; }
-
-p, li {
+p {
  font-family: 'Montserrat', sans-serif;
  line-height: 1.5em;
  margin-bottom: 0;
 }
 
-a {
+main a {
 	font-weight: 700;
 	text-decoration: none;	
 }
-a:link { color: #38786a; }
-a:visited { color: #38786a; }
-a:hover { color: #000000; }
-a:active { color: #000000; }
+
+main  a:link { color: #38786a; }
+main  a:visited { color: #38786a; }
+main  a:hover { color: #403933; }
+a:active { color: #403933; }
+
+
 a:hover {
 	text-decoration: underline;	
 }
 
-em {
-  font-weight: bold;
-  font-style: normal;
-}
-
 footer p {
-	color: #fff;	
-	text-align: center;
-  padding: 30px;
-  margin: 0;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
 }
 
-/* -------  Elements ------- */
-
-img, iframe { 
-  width: 100%;	
+img.image-enhanced {
   border-radius: 8px;
-  border: 1px solid #c5c0b8;
-} 
+}
 
-/* -------  Modifier styles ------- */
+.group {
+  display: flex;
+  flex-direction: column;
+}
+.group-center {
+  align-items: center;
+  align-content: center;
+}
 
-.border-top {
-  padding-top: 80px;
-  border-top: 2px solid #000000;
+.item {
+  flex: 1;
+  margin: 10px;
+}
+
+/* ---  (Desktop) Groups & Items --- */
+
+@media all and (min-width: 800px) {
+  section {
+    padding: 0 10%;
+  }
+  .group {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+
+
+/* Contact Form Design */
+
+form {
+  padding-right: 8px;
+  /* Fixed small sizing issue on the right */
+}
+
+form label {
+  display: block;
+}
+
+form input, 
+form textarea {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+form textarea {
+  height: 160px;
 }
